Starting with HSpec

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: haskell
 
 script:
+  - cabal install --only-dependencies --enable-tests
   - cabal configure --enable-tests --ghc-options=-Werror && cabal build && cabal test
